--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,15 @@ a {
     text-decoration: none;
 }
 
+body {
+    margin: 0;
+}
+
 /* Add styles */
 body {
     font-family: sans-serif;
     flex-direction: column;
-    flex-basis: 100vh;
+    
 }
 
 header, section, footer {
@@ -62,17 +66,24 @@ button {
 body, 
 header, 
 .nav-container, 
-.content-container-1, 
+.content-container-1,
+.content-container-2,
+.section-3, 
 .left-text-container {
     display: flex;
+}
+
+section {
+    padding-top: 43px;
+    padding-bottom: 43px;
 }
 
 /* Basic Header layout. */
 header {
     background-color: #1F2937;
     justify-content: space-between;
-    padding-top: 45px;
-    padding-bottom: 45px;
+    padding-top: 46px;
+    padding-bottom: 23px;
     
     
 }
@@ -89,7 +100,7 @@ header {
 
 }
 
-/* First Content Block */
+/* Section 1 */
 .section-1 {
     background-color: #1F2937;
 
@@ -98,13 +109,13 @@ header {
 .content-container-1 {
     height: 300px;
     padding-bottom: 45px;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .left-text-container {
     flex-direction: column;
     justify-content: center;
-    flex: 0 1 600px;
+    flex: 0 1 550px;
 }
 
 .marble {
@@ -115,4 +126,64 @@ header {
 button {
     border: none;
     border-radius: 8px;
+}
+
+/* Section 2 */
+
+.content-container-2 {
+    flex-direction: column;
+    height: 300px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.content-container-2 h2 {
+    padding-bottom: 46px;
+}
+
+.info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.info {
+    flex: 0 1 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info-img {
+    width: 150px;
+    border-radius: 8px;
+}
+
+.info p {
+    text-align: justify;
+}
+
+/* Section 3 */
+
+.section-3 {
+    background-color: rgb(229,231,235); 
+    height: 386px;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.quote-container {
+    width: 800px;
+}
+
+blockquote {
+    color: #1F2937;
+    font-size: 28px;
+    font-style: italic;
+
+}
+
+figcaption {
+    text-align: end;
+    
 }
